# test_django

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
test_sf/: .env.example  manage.py  wait_for_postgres.py
test_sf/contracts/: admin.py  models.py  urls.py
test_sf/contracts/admin_models/: admin_contracts.py  admin_products.py
test_sf/contracts/api/v1/: contracts_serializers.py  contracts_viewsets.py  product_serializers.py  product_viewsets.py  urls.py
test_sf/contracts/custom_models/: contract.py  mixins.py  products.py
test_sf/contracts/locale/ru/LC_MESSAGES/: django.po
test_sf/contracts/management/commands/: init_user.py
test_sf/contracts/migrations/: 0001_initial.py  0002_auto_20231217_1015.py  0003_auto_20231223_2128.py  0004_auto_20231224_1542.py  0005_auto_20231224_1640.py
test_sf/contracts/utils/: constants.py
test_sf/test_sf/: asgi.py  settings.py  urls.py  wsgi.py
test_sf/test_sf/components/: database.py  logging.py
